<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    android:orientation="vertical"
    tools:context=".QuizActivity">


    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/Question_Number"
        android:textAlignment="center"
        android:textColor="#ffa384"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textColor="#6E0505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/Question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Question_1"
            android:textColor="#EAE5E5"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FirstTwoOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <TextView
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/cust_button"
            android:paddingTop="14dp"
            android:text="@string/Question1_A"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/cust_button"
            android:paddingTop="14dp"
            android:text="@string/Question1_B"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LastTwoOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/cust_button"
            android:paddingTop="14dp"
            android:text="@string/Question1_C"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/cust_button"
            android:paddingTop="14dp"
            android:text="@string/Question1_D"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:layout_marginTop="5dp">

    <Button
        android:id="@+id/NextQ"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#EAE5E5"
        android:text="@string/next_question"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="invisible"
        app:cornerRadius="15sp" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/Score"
            android:textColor="#ffa384"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/ProgressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#ffa384">

        </ProgressBar>


    </LinearLayout>


</LinearLayout>

