<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Text_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="#F7D094"
        android:textSize="20sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_question_s_category"
            android:textColor="#1B0C0C"
            android:textSize="25sp"
            android:textStyle="bold" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/FirstTwoOptions"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/First_Category"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingTop="14dp"
                android:text="@string/general_questions"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Second_Category"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingTop="14dp"
                android:text="@string/math"

                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Third_Category"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingTop="14dp"
                android:text="@string/reading"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <Button
            android:layout_width="match_parent"
            android:id="@+id/LogOut"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="300dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#000000"
            android:text="@string/log_out" />

    </LinearLayout>

</LinearLayout>



