<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sign_up_background"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/EnterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#000000"
        android:hint="@string/enter_your_email"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#978C8C"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginNowText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EnterPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#000000"
        android:hint="@string/enter_your_password"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#978C8C"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EnterEmail"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:backgroundTint="#E3E2E2"
        android:text="@string/login"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EnterPass" />

    <TextView
        android:id="@+id/NoAccountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_account_register_here"
        android:textColor="#F7D094"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/LoginNowText"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="13dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_now_and_start_your_quiz"
        android:textColor="#F7D094"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Remember me"
        app:layout_constraintEnd_toStartOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterPass" />

</androidx.constraintlayout.widget.ConstraintLayout>